fixed sidebar on mobile

--- a/homepage.css
+++ b/homepage.css
@@ -70,6 +70,16 @@ body::-webkit-scrollbar-thumb {
     letter-spacing: 15px;
     width: 500px;
     height: 100%;
+    animation: namefocus 2s normal forwards;
+}
+
+@keyframes namefocus {
+    0% {
+        filter: blur(25px);
+    }
+    100% {
+        filter: blur(0px);
+    }
 }
 
 .topbar > .navbar {
@@ -152,7 +162,7 @@ body::-webkit-scrollbar-thumb {
     overflow:hidden;
     height: 100vh;
     width: 55px;
-    justify-self: flex-end;
+    right: 0%;
     display: flex;
     flex-direction: column;
     justify-content: center;
